hard-gists/835979/run.log
=== Docker Run Log for 835979 ===
Started at: Mi 29. Okt 17:44:07 CET 2025

[2025-10-29 17:44:08] START: Running container for 835979
[2025-10-29 17:44:08] SUCCESS: Container 0f427d4d4397f9718bf8a5b8112bce8702058e83876b9f2f32caf81f05ae224d started for 835979
=== Container logs for 835979 ===
  File "/snippet.py", line 59
    print len(pages)
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 835979 ===
[2025-10-29 17:44:10] INFO: Container 0f427d4d4397f9718bf8a5b8112bce8702058e83876b9f2f32caf81f05ae224d has stopped
